--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,9 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if(restaurant['price']>alternative['price']):\n",
-    "        return(restaurant['name'])"
+    "        return(restaurant['name'])\n",
+    "    else:\n",
+    "        return"
    ]
   },
   {
