--- a/index.ipynb
+++ b/index.ipynb
@@ -195,9 +195,9 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if(restaurant['price']>alternative['price']):\n",
-    "        return(restaurant['name'])\n",
+    "        return(alter['name'])\n",
     "    else:\n",
-    "        return"
+    "        return()"
    ]
   },
   {
