--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if('is_closed')"
+    "    if('is_closed')\n",
+    "        "
    ]
   },
   {
