--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if('is_closed')\n",
+    "    if('is_closed')=F\n",
     "        "
    ]
   },
