Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if('is_closed')=F\n",
+    "    if('is_closed')=False:\n",
+    "        return\n",
+    "    \n",
     "        "
    ]
   },
