--- a/index.ipynb
+++ b/index.ipynb
@@ -289,8 +289,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if('is_closed')==False:\n",
-    "        return(restaurant)\n",
+    "    open=[]\n",
     "    \n",
     "        "
    ]
