Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open=[]\n",
-    "    \n",
+    "    for restaurant in restaurants:\n",
+    "        \n",
     "    \n",
     "        "
    ]
