--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "def open_restaurants(restaurants):\n",
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant\n",
+    "        if not restaurant['is_closed']\n",
     "    \n",
     "        "
    ]
