Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,10 +292,8 @@
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
-    "            \n",
-    "        \n",
-    "    \n",
-    "        "
+    "            open.append\n",
+    "           "
    ]
   },
   {
