--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,9 @@
     "    open=[]\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
-    "            open.append\n",
+    "            open.append(restaurant)\n",
+    "            \n",
+    "open\n",
     "           "
    ]
   },
