--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
     "            open.append(restaurant)\n",
-    "        \n",
+    "    return\n",
     "            \n",
     "\n",
     "           "
